<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.github.strategic-primer</groupId>
  <artifactId>assistive-programs</artifactId>
  <version>${revision}</version>

  <properties>
    <revision>0.5-SNAPSHOT</revision>
    <maven.compiler.release>17</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <junit.platform.version>1.8.0</junit.platform.version>
    <junit.jupiter.version>5.8.2</junit.jupiter.version>
    <javatuples.version>1.2</javatuples.version>
    <jetbrains.annotations.version>24.0.1</jetbrains.annotations.version>
    <auto-service.version>1.0.1</auto-service.version>
    <orange-extensions.version>1.3.1</orange-extensions.version>
  </properties>

  <packaging>pom</packaging>

  <modules>
    <module>drivers.common</module>
    <module>drivers.exploration.common</module>
    <module>drivers.exploration.old</module>
    <module>drivers.generators</module>
    <module>drivers.gui.common</module>
    <module>drivers.query</module>
    <module>drivers.utility</module>
    <module>drivers.worker.common</module>
    <module>mining</module>
    <module>model</module>
    <module>report</module>
    <module>main</module>
    <module>lovelace-util</module>
    <module>third-party</module>
  </modules>

  <!-- TODO: Investigate maven-enforcer-plugin -->
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M5</version>
        <configuration>
          <trimStackTrace>false</trimStackTrace>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <annotationProcessorPaths>
            <path>
              <groupId>com.google.auto.service</groupId>
              <artifactId>auto-service</artifactId>
              <version>${auto-service.version}</version>
            </path>
          </annotationProcessorPaths>
          <forceJavacCompilerUse>true</forceJavacCompilerUse>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <version>3.3.0</version>
        <executions>
          <execution>
            <id>parse-version</id>
            <phase>validate</phase>
            <goals>
              <goal>parse-version</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
